Bug 248979 - [Live Range Selection] editing/execCommand/reset-direction-after-breaking-blockquote.html fails
Summary: [Live Range Selection] editing/execCommand/reset-direction-after-breaking-blo...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: HTML Editing (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Ryosuke Niwa
URL:
Keywords: InRadar
Depends on:
Blocks: 216325
  Show dependency treegraph
 
Reported: 2022-12-08 14:16 PST by Ryosuke Niwa
Modified: 2022-12-09 13:39 PST (History)
2 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ryosuke Niwa 2022-12-08 14:16:11 PST
editing/execCommand/reset-direction-after-breaking-blockquote.html fails when enabling live range selection.
Comment 1 Ryosuke Niwa 2022-12-08 14:20:18 PST
Pull request: https://github.com/WebKit/WebKit/pull/7348
Comment 2 EWS 2022-12-09 13:38:32 PST
Committed 257644@main (b6621f17c494): <https://commits.webkit.org/257644@main>

Reviewed commits have been landed. Closing PR #7348 and removing active labels.
Comment 3 Radar WebKit Bug Importer 2022-12-09 13:39:21 PST
<rdar://problem/103192821>