[Live Range Selection] editing/execCommand/reset-direction-after-breaking-blockquote.html fails https://bugs.webkit.org/show_bug.cgi?id=248979

Reviewed by Wenson Hsieh.

The bug was caused by BreakBlockquoteCommand always using the position before breakNode even when the element
in question is a div. In this case, we need to use the first position in div instead.

* LayoutTests/editing/execCommand/reset-direction-after-breaking-blockquote-live-range-expected.txt: Added.
* LayoutTests/editing/execCommand/reset-direction-after-breaking-blockquote-live-range.html: Added.
* Source/WebCore/editing/BreakBlockquoteCommand.cpp:
(WebCore::BreakBlockquoteCommand::doApply):

Canonical link: https://commits.webkit.org/257644@main